Removed fixed positioning for the jump to menu widget

--- a/src/plugins/jump-to-menu/assets/css/from-jump-to-menu.css
+++ b/src/plugins/jump-to-menu/assets/css/from-jump-to-menu.css
@@ -3,7 +3,6 @@
   background-color: #ffffff;
   font-family: "Source Sans Pro";
   color: #000000;
-  position: fixed;
   height: auto;
   z-index: 999;
   top: 0;
